# TMJ-Analysis

./: .gitignore  CMakeLists.txt  README.md  TMJ_Analysis.s4ext
TMJExtension/: TMJExtension.py
TMJExtension/CoarseRegistration/: CoarseRegistration.py
TMJExtension/DataManager/: DataManager.py
TMJExtension/DataPreprocessing/: DataPreprocessing.py  __init__.py  data_preprocessing_logic.py  data_preprocessing_widget.py
TMJExtension/GoldStandardSet/: GoldStandardSet.py
TMJExtension/ROIMaskSet/: ROIMaskSet.py
TMJExtension/RegistrationEvaluation/: RegistrationEvaluation.py  __init__.py  registration_evaluation_logic.py  registration_evaluation_widget.py
TMJRegistration/: CMakeLists.txt  TMJRegistration.py
TMJRegistration/Backend/: .gitignore  CMakeLists.txt  test_registration.ps1
TMJRegistration/Backend/config/MI/: Affine.json  Evaluation.json  Rigid+Affine.json  Rigid.json
TMJRegistration/Backend/config/MIND/: Affine.json  Evaluation.json  MIND.md  MIND_ISSUES.txt  Rigid+Affine.json  Rigid.json  test_mind.ps1
TMJRegistration/Backend/include/: ConfigManager.h  GaussNewtonOptimizer.h  ImageMetricBase.h  ImageRegistration.h  MINDMetric.h  MattesMutualInformation.h
TMJRegistration/Backend/src/: ConfigManager.cpp  GaussNewtonOptimizer.cpp  ImageRegistration.cpp  MINDMetric.cpp  MattesMutualInformation.cpp  main.cpp  test_mind_simple.cpp
TMJRegistration/MINDRegistration/: __init__.py  mind_registration_logic.py  mind_registration_widget.py
TMJRegistration/MIRegistration/: __init__.py  mi_registration_logic.py  mi_registration_widget.py
